haram windows support (allegedly, normal inserts dont work)